Add social tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple License Generator</title>
 
+    <meta property="og:title" content="Create Your Own Simple License" />
+    <meta property="og:site_name" content="Simple License Generator" />
+    <meta
+      property="og:url"
+      content="https://simonmeskens.github.io/SimpleLicenseCollection/"
+    />
+    <meta
+      property="og:description"
+      content="A license generator for simple, compact licenses."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://user-images.githubusercontent.com/4284735/159537019-6ccee52c-a144-46aa-8210-6981bfe68f9c.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image:alt"
+      content="A simple generator for compact licenses."
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
