--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </select>
           </p>
           <p>
-            <label class="equivalent-license">Equivalent license: </label>
+            <label class="equivalent-license">Similar licenses: </label>
             <span>
               <a
                 href="https://opensource.org/licenses/ISC"
