--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
+    />
+
     <style>
       body {
         padding-inline: 4rem;
@@ -434,5 +439,15 @@
         </p>
       </article>
     </main>
+    <footer>
+      <a
+        class="github-fork-ribbon"
+        href="https://github.com/SimonMeskens/SimpleLicenseCollection"
+        data-ribbon="Fork me on GitHub"
+        title="Fork me on GitHub"
+      >
+        Fork me on GitHub
+      </a>
+    </footer>
   </body>
 </html>
